Fix Spinner Alignment

--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -29,7 +29,7 @@ $spinner-icon-margin: 10px;
     position: absolute;
     z-index: 2;
     top: 50%;
-    transform: translate(1%, -50%) scale(0.65);
+    transform: translate(0, -50%) scale(0.8);
   }
 
   .ui-128__spinner-pulse-outer,
